# mini-erp-gestao-vendas

./: .gitignore  Makefile  README.md  bitbucket-pipelines.yml  deploy.sh  pyproject.toml  setup_initial.sh
app/accounts/: admin.py  apps.py  backends.py  managers.py  permissions.py  roles.py  views.py
app/common/: choices.py  decorator.py  hash_permissions.py  mixins.py  models.py  permissions.py  utils.py  views.py
app/companies/: admin.py  apps.py  models.py
app/customers/: admin.py  apps.py  decorador.py  filters.py  forms.py  managers.py  models.py  urls.py  view_ajax.py  views.py
app/dashboard/: views.py
app/financial_control/: actions_ajax.py  admin.py  apps.py  config_html.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py  views_ajax.py
app/products/: admin.py  apps.py  forms.py  managers.py  models.py  signal.py  urls.py  view_ajax.py  views.py
app/sales/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py  views_ajax.py
app/settings/: admin.py  apps.py  forms.py  models.py  urls.py
config/: jazzadmin.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
nginx/: backend.conf
statics/: login.css  style.css
statics/css/: cliente.css  pagamento.css  settings.css  style-form-pag.css  venda.css  w3.css
statics/error/: error_403.css  error_404.css  error_502.css
statics/js/: bills_to_pay.js  bills_to_receive.js  category.js  choices-config.js  client.js  config.js  sale.js  (+7 more)
supervisor/: backend.ini
templates/: 403.html  404.html  500.html  base.html  base2.html  not_authorized.html
(+102 files in other folders)
